@@ -3,7 +3,8 @@
           with fuzzy matching, translation memory, keyword search, 
           glossaries, and translation leveraging into updated projects.
 
- Copyright (C) 2007 - Zoltan Bartko - bartkozoltan@bartkozoltan.com
+ Copyright (C) 2007 Zoltan Bartko 
+               2009 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -37,7 +38,8 @@ import org.omegat.util.StaticUtils;
 
 /**
  * Dictionary manager. Spell checking dictionaries' utility functions.
- * @author bartkoz
+ * @author Zoltan Bartko - bartkozoltan@bartkozoltan.com
+ * @author Didier Briel
  */
 public class DictionaryManager {
     
@@ -238,6 +240,14 @@ public class DictionaryManager {
         
         StaticUtils.downloadFileToDisk(from, to);
         
+        // Dirty hack for the French dictionary. Since it is named
+        // fr_FR_1-3-2.zip, we remove the "_1-3-2" portion
+        // [ 2138846 ] French dictionary cannot be downloaded and installed
+        int pos;
+        if ( (pos = langCode.indexOf("_1-3-2", 0)) != -1 ){
+            langCode = langCode.substring(0, pos);
+        }
+
         List<String> filenames = new ArrayList<String>();
         
         filenames.add(langCode + OConsts.SC_AFFIX_EXTENSION);
